RESOLVED FIXED87745
[GTK] Missing field initializers for WKPageLoaderClient and WKPageUIClient
https://bugs.webkit.org/show_bug.cgi?id=87745
Summary [GTK] Missing field initializers for WKPageLoaderClient and WKPageUIClient
Simon Pena
Reported 2012-05-29 07:20:26 PDT
Building WK2 currently outputs the following warnings: ../../Source/WebKit2/UIProcess/API/gtk/WebKitUIClient.cpp:194:5: warning: missing initializer for member ‘WKPageUIClient::unavailablePluginButtonClicked’ [-Wmissing-field-initializers] ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:151:5: warning: missing initializer for member ‘WKPageLoaderClient::pluginDidFail’ [-Wmissing-field-initializers] The attached patch initializes these members.
Attachments
Patch (2.64 KB, patch)
2012-05-29 07:41 PDT, Simon Pena
no flags
Simon Pena
Comment 1 2012-05-29 07:41:55 PDT
WebKit Review Bot
Comment 2 2012-05-29 07:44:28 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2012-05-29 07:53:03 PDT
Comment on attachment 144556 [details] Patch Thanks!
WebKit Review Bot
Comment 4 2012-05-29 09:47:19 PDT
Comment on attachment 144556 [details] Patch Clearing flags on attachment: 144556 Committed r118795: <http://trac.webkit.org/changeset/118795>
WebKit Review Bot
Comment 5 2012-05-29 09:47:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.