[GTK] Missing field initializers for WKPageLoaderClient and WKPageUIClient https://bugs.webkit.org/show_bug.cgi?id=87745

Patch by Simon Pena <spena@igalia.com> on 2012-05-29
Reviewed by Carlos Garcia Campos.

Add missing initializers for WKPageLoaderClient and
WKPageUIClient, for callbacks WKPagePluginDidFailCallback and
WKPageUnavailablePluginButtonClickedCallback, introduced in
revision r116716.

* UIProcess/API/gtk/WebKitLoaderClient.cpp:
(attachLoaderClientToView): Initialize WKPagePluginDidFailCallback
* UIProcess/API/gtk/WebKitUIClient.cpp:
(attachUIClientToView): Initialize callback
WKPageUnavailablePluginButtonClickedCallback

Canonical link: https://commits.webkit.org/105536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118795 268f45cc-cd09-0410-ab3c-d52691b4dbfc