Source/WebKit2/UIProcess/API/gtk/WebKitUIClient.cpp
@@ -191,6 +191,7 @@ void attachUIClientToView(WebKitWebView* webView)
         createNewPage,
         mouseDidMoveOverElement,
         0, // decidePolicyForNotificationPermissionRequest
+        0, // unavailablePluginButtonClicked
     };
     WKPageRef wkPage = toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView)));
     WKPageSetPageUIClient(wkPage, &wkUIClient);
